--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 
       <center>
       <div class="github-btn">
-        <p><a href="#">Download</a> Template From Github <i class="fa fa-github"></i></p>
+        <p><a href="https://github.com/AlphaDarkmoon/LinkForest">Download</a> Template From Github <i class="fa fa-github"></i></p>
       </div>
     </center>
 
