--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               <div class="icon">
                 <img src="assets/images/icons/web.png" alt="website" />
               </div>
-              <a href="Docs/index-2.html" class="card-box-footer"
+              <a href="#" class="card-box-footer"
                 >View More <i class="fa fa-arrow-circle-right"></i
               ></a>
             </div>
@@ -218,7 +218,7 @@
               <div class="icon">
                 <img src="assets/images/icons/shop.png" alt="website" />
               </div>
-              <a  class="card-box-footer"
+              <a  href="#" class="card-box-footer"
                 >Out of Service <i class="fa fa-arrow-circle-right"></i
               ></a>
             </div>
@@ -275,7 +275,7 @@
               <div class="icon">
                 <img src="assets/images/icons/twitter.png" alt="twitter" />
               </div>
-              <a href="https://twitter.com/alpha_darkmoon" class="card-box-footer"
+              <a href="https://twitter.com/alpha_darkmode" class="card-box-footer"
                 >View More <i class="fa fa-arrow-circle-right"></i
               ></a>
             </div>
