--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
               <div class="icon">
                 <img src="assets/images/icons/twitter.png" alt="twitter" />
               </div>
-              <a href="https://twitter.com/alpha_darkmode" class="card-box-footer"
+              <a href="https://x.com/alpha_darkmode" class="card-box-footer"
                 >View More <i class="fa fa-arrow-circle-right"></i
               ></a>
             </div>
