Added purecode web

--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
           <div class="col-lg-3 col-sm-6">
             <div class="card-box bg-shop">
               <div class="inner">
-                <h3>Shop</h3>
-                <p>Buy Tech. Products</p>
+                <h3>PureCode</h3>
+                <p>Html & Css components</p>
               </div>
               <div class="icon">
-                <img src="assets/images/icons/shop.png" alt="website" />
+                <img src="assets/images/icons/purecode_icon.png" alt="website" />
               </div>
               <a  href="#" class="card-box-footer"
-                >Out of Service <i class="fa fa-arrow-circle-right"></i
+                >coming soon <i class="fa fa-arrow-circle-right"></i
               ></a>
             </div>
           </div>
