Updated PureCodes link

--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
               <div class="icon">
                 <img src="assets/images/icons/purecode_icon.png" alt="website" />
               </div>
-              <a  href="#" class="card-box-footer"
-                >coming soon <i class="fa fa-arrow-circle-right"></i
+              <a  href="https://0001.pythonanywhere.com" class="card-box-footer"
+                >View More <i class="fa fa-arrow-circle-right"></i
               ></a>
             </div>
           </div>
